--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.11.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
@@ -49,5 +50,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "^5"
+    }
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
