--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "luxon": "^3.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^7.2.0",
